[gd_scene load_steps=3 format=3 uid="uid://bs035oor8cgug"]

[ext_resource type="Script" path="res://scenes/menu/SettingsWindow.gd" id="1_n1fvm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2lxl"]
bg_color = Color(0.2484, 0.2484, 0.2484, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Settings" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -185.0
offset_right = 256.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_e2lxl")
script = ExtResource("1_n1fvm")
metadata/_edit_vertical_guides_ = [233.0, 312.0, 72.0, 832.0, 1312.0]

[node name="LabelSettings" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_top = 9.5
offset_right = 46.0
offset_bottom = 32.5
grow_horizontal = 2
text = "Настройки"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.092
anchor_right = 0.5
anchor_bottom = 0.092
offset_left = -192.0
offset_top = 0.959999
offset_right = 195.0
offset_bottom = 4.96

[node name="VScrollBar" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -142.0
offset_right = 191.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="HBoxContainer" type="VBoxContainer" parent="VScrollBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="VScrollBar/HBoxContainer"]
layout_mode = 2
text = "Video"
horizontal_alignment = 1
uppercase = true

[node name="Video" type="GridContainer" parent="VScrollBar/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 95
columns = 2

[node name="LabelGraphics" type="Label" parent="VScrollBar/HBoxContainer/Video"]
layout_mode = 2
text = "Графика"

[node name="OptionButtonGraphics" type="OptionButton" parent="VScrollBar/HBoxContainer/Video"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
disabled = true
selected = 2
item_count = 3
popup/item_0/text = "Высока"
popup/item_1/text = "Средния"
popup/item_1/id = 1
popup/item_2/text = "Низкая"
popup/item_2/id = 2

[node name="LabelResolution" type="Label" parent="VScrollBar/HBoxContainer/Video"]
layout_mode = 2
text = "Разрешение"

[node name="OptionButtonResolution" type="OptionButton" parent="VScrollBar/HBoxContainer/Video"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 13
selected = 2
item_count = 5
popup/item_0/text = "1920x1080"
popup/item_1/text = "1280x1024"
popup/item_1/id = 4
popup/item_2/text = "1280x720"
popup/item_2/id = 1
popup/item_3/text = "1152x648"
popup/item_3/id = 2
popup/item_4/text = "640x360"
popup/item_4/id = 3

[node name="LabelFullScreen" type="Label" parent="VScrollBar/HBoxContainer/Video"]
layout_mode = 2
text = "Полный Экран"

[node name="CheckBoxFullScreen" type="CheckBox" parent="VScrollBar/HBoxContainer/Video"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="LabelVSync" type="Label" parent="VScrollBar/HBoxContainer/Video"]
layout_mode = 2
text = "VSync"

[node name="CheckBoxVSync" type="CheckBox" parent="VScrollBar/HBoxContainer/Video"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VScrollBar/HBoxContainer"]
layout_mode = 2
text = "Audio"
horizontal_alignment = 1
uppercase = true

[node name="Audio" type="GridContainer" parent="VScrollBar/HBoxContainer"]
layout_mode = 2
columns = 2

[node name="LabelVolume" type="Label" parent="VScrollBar/HBoxContainer/Audio"]
layout_mode = 2
text = "Громкость"

[node name="HSliderVolume" type="HSlider" parent="VScrollBar/HBoxContainer/Audio"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label3" type="Label" parent="VScrollBar/HBoxContainer"]
layout_mode = 2
text = "Control"
horizontal_alignment = 1
uppercase = true

[node name="Mouse" type="GridContainer" parent="VScrollBar/HBoxContainer"]
layout_mode = 2
columns = 2

[node name="LabelSensitiveMouse" type="Label" parent="VScrollBar/HBoxContainer/Mouse"]
layout_mode = 2
text = "Чувствительность мышки"

[node name="HSliderSensitiveMouse" type="HSlider" parent="VScrollBar/HBoxContainer/Mouse"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
value = 5.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 317.0
offset_right = 360.0
offset_bottom = 357.0
theme_override_constants/separation = 35
alignment = 1
metadata/_edit_group_ = true

[node name="ButtonCancel" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Отмена"

[node name="ButtonSave" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Сохранить"

[connection signal="pressed" from="HBoxContainer/ButtonCancel" to="." method="_on_close"]
[connection signal="pressed" from="HBoxContainer/ButtonSave" to="." method="_on_apply_settings"]
